--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
-    "pinia": "^2.1.4"
+    "pinia": "^2.1.4",
+    "vue-advanced-cropper": "^2.8.8"
   }
 }
